Inserção da tag BASE.

--- a/personagens/index.html
+++ b/personagens/index.html
@@ -179,6 +179,7 @@ if (!doNotTrack) {
 
 
 
+<p><base href="https://andersonuyekita.github.io/ge_database/"/></p>
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 <ol class="carousel-indicators">
 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -186,7 +187,7 @@ if (!doNotTrack) {
 </ol>
 <div class="carousel-inner">
 <div class="carousel-item active">
-<img src="https://andersonuyekita.github.io/ge_database/personagens/banner_mondstadt.jpg" class="d-block w-100" alt="Imagem da Cidade de Mondstadt."/>
+<img src="https://andersonuyekita.github.io/ge_database//personagens/_index/banner_mondstadt.jpg" class="d-block w-100" alt="Imagem da Cidade de Mondstadt."/>
 <div class="carousel-caption d-none d-md-block">
 <h1 class="genshin_font">Mondstadt</h1>
 <p>
@@ -195,7 +196,7 @@ if (!doNotTrack) {
 </div>
 </div>
 <div class="carousel-item">
-<img src="https://andersonuyekita.github.io/ge_database//personagens/banner_liyue.jpg" class="d-block w-100" alt="Imagem da Cidade de Liyue"/>
+<img src="https://andersonuyekita.github.io/ge_database//personagens/_index/banner_liyue.jpg" class="d-block w-100" alt="Imagem da Cidade de Liyue"/>
 <div class="carousel-caption d-none d-md-block">
 <h1 class="genshin_font">Liyue</h1>
 <p>
