--- a/personagens/index.html
+++ b/personagens/index.html
@@ -179,7 +179,6 @@ if (!doNotTrack) {
 
 
 
-<p><base href="https://andersonuyekita.github.io/ge_database"/></p>
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 <ol class="carousel-indicators">
 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -187,7 +186,7 @@ if (!doNotTrack) {
 </ol>
 <div class="carousel-inner">
 <div class="carousel-item active">
-<img src="https://andersonuyekita.github.io/ge_database/personagens/_index/banner_mondstadt.jpg" class="d-block w-100" alt="Imagem da Cidade de Mondstadt."/>
+<img style="content:url(&#39;../personagens/_index/banner_mondstadt.jpg&#39;)" class="d-block w-100" alt="Imagem da Cidade de Mondstadt."/>
 <div class="carousel-caption d-none d-md-block">
 <h1 class="genshin_font">Mondstadt</h1>
 <p>
@@ -196,7 +195,7 @@ if (!doNotTrack) {
 </div>
 </div>
 <div class="carousel-item">
-<img src="https://andersonuyekita.github.io/ge_database/personagens/_index/banner_liyue.jpg" class="d-block w-100" alt="Imagem da Cidade de Liyue"/>
+<img style="content:url(&#39;../personagens/_index/banner_liyue.jpg&#39;)" class="d-block w-100" alt="Imagem da Cidade de Liyue"/>
 <div class="carousel-caption d-none d-md-block">
 <h1 class="genshin_font">Liyue</h1>
 <p>
