Atualização de todos os HTML
- Utilizado o blogdown::build_site(build_rmd = TRUE)

--- a/personagens/amber/index.html
+++ b/personagens/amber/index.html
@@ -179,7 +179,7 @@ if (!doNotTrack) {
 
 
 <div class="container-fluid no-padding">
-<div class="row" style="background-image: url(&#39;/personagens/amber/bg_amber.png&#39;); background-repeat: no-repeat;&#10;                             background-size: cover;&#10;                             background-position: center right;">
+<div class="row" style="background-image: url(&#39;../amber/bg_amber.png&#39;); background-repeat: no-repeat;&#10;                             background-size: cover;&#10;                             background-position: center right;">
 <div class="w-50 p-3">
 <h1 class="genshin_font">AMBER</h1>
 <p class="lead">
