Atualização da tabela char.
- Adição de todas as descrições dos personagens jogáveis.
- Teste de inserção de um flexdashboard na Sucrose.

--- a/personagens/chongyun/index.html
+++ b/personagens/chongyun/index.html
@@ -295,7 +295,7 @@ if (!doNotTrack) {
 <h1 class="genshin_font">Chongyun</h1>
 <p class="lead">
 <strong>
-<em>NA</em>
+<em>Um jovem exorcista de uma família de exorcistas. Ele faz de tudo para suprimir seu Psíquico Yang Puro.</em>
 </strong>
 </p>
 <div class="w-100 p-3" style="background-color: rgba(255, 255, 255, 0.70);">
@@ -303,7 +303,7 @@ if (!doNotTrack) {
 <table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
 <tbody>
   <tr>
-   <td style="text-align:left;"> element </td>
+   <td style="text-align:left;"> vision </td>
    <td style="text-align:left;"> cryo </td>
   </tr>
   <tr>
@@ -312,7 +312,7 @@ if (!doNotTrack) {
   </tr>
   <tr>
    <td style="text-align:left;"> allegiance </td>
-   <td style="text-align:left;"> NA </td>
+   <td style="text-align:left;"> porto de liyue </td>
   </tr>
   <tr>
    <td style="text-align:left;"> title </td>
@@ -324,10 +324,10 @@ if (!doNotTrack) {
   </tr>
   <tr>
    <td style="text-align:left;"> birthday </td>
-   <td style="text-align:left;"> NA </td>
+   <td style="text-align:left;"> 07/09 </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> city </td>
+   <td style="text-align:left;"> nation </td>
    <td style="text-align:left;"> liyue </td>
   </tr>
   <tr>
