--- a/personagens/hu-tao/index.html
+++ b/personagens/hu-tao/index.html
@@ -303,7 +303,7 @@ if (!doNotTrack) {
 <table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
 <tbody>
   <tr>
-   <td style="text-align:left;"> element </td>
+   <td style="text-align:left;"> vision </td>
   </tr>
   <tr>
    <td style="text-align:left;"> rarity </td>
@@ -321,7 +321,7 @@ if (!doNotTrack) {
    <td style="text-align:left;"> birthday </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> city </td>
+   <td style="text-align:left;"> nation </td>
   </tr>
   <tr>
    <td style="text-align:left;"> gender </td>
