--- a/personagens/index.html
+++ b/personagens/index.html
@@ -329,6 +329,7 @@ if (!doNotTrack) {
 Mondstadt
 </h2>
 <p></a></p>
+<p>Atualmente a nação de Mondstadt possui 18 personagens jogáveis. Sendo 6 homens e 12 mulheres.</p>
 <div class="row row-cols-1 row-cols-md-4">
 <div class="col mb-4">
 <div class="card h-100">
@@ -858,6 +859,7 @@ Venti
 Porto de Liyue
 </h2>
 <p></a></p>
+<p>Atualmente a nação de Liyue possui 13 personagens jogáveis. Sendo 4 homens e 9 mulheres.</p>
 <div class="row row-cols-1 row-cols-md-4">
 <div class="col mb-4">
 <div class="card h-100">
@@ -1246,35 +1248,6 @@ Outras nações
 <div class="col mb-4">
 <div class="card h-100">
 <div class="container-fluid no-padding" style="background-image: url(&#39;../personagens/index/sne_avatar_bg.png&#39;); background-repeat: no-repeat;&#10;                                    background-size: cover;&#10;                                    background-position: center center;&#10;                                    width: 100%;">
-<a href="../personagens/tartaglia">
-<div style="text-align: center;">
-<img style="content:url(&#39;../personagens/index/avatares/sne_avatar_tartaglia.png&#39;)"/>
-</div>
-</a>
-</div>
-<div class="container-fluid" style="padding:0">
-<div class="container-fluid card-body" style="padding-left:0; padding-right:0;">
-<h5 class="genshin_font" style="text-align: center">
-Tartaglia
-<i class="fa fa-star" style="color: #FFDF00" aria-hidden="true"></i>
-</h5>
-<div class="container-fluid">
-<div class="row">
-<div class="col-6">
-<img src="../personagens/index/iconelemental/icon_hydro.svg" style="width:100%;"/>
-</div>
-<div class="col-6">
-<img src="../personagens/index/iconweapon/icon_bow.svg" style="width:100%;"/>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="col mb-4">
-<div class="card h-100">
-<div class="container-fluid no-padding" style="background-image: url(&#39;../personagens/index/sne_avatar_bg.png&#39;); background-repeat: no-repeat;&#10;                                    background-size: cover;&#10;                                    background-position: center center;&#10;                                    width: 100%;">
 <a href="../personagens/aether">
 <div style="text-align: center;">
 <img style="content:url(&#39;../personagens/index/avatares/sne_avatar_aether.png&#39;)"/>
@@ -1323,6 +1296,35 @@ Lumine
 </div>
 <div class="col-6">
 <img src="../personagens/index/iconweapon/icon_sword.svg" style="width:100%;"/>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="col mb-4">
+<div class="card h-100">
+<div class="container-fluid no-padding" style="background-image: url(&#39;../personagens/index/sne_avatar_bg.png&#39;); background-repeat: no-repeat;&#10;                                    background-size: cover;&#10;                                    background-position: center center;&#10;                                    width: 100%;">
+<a href="../personagens/tartaglia">
+<div style="text-align: center;">
+<img style="content:url(&#39;../personagens/index/avatares/sne_avatar_tartaglia.png&#39;)"/>
+</div>
+</a>
+</div>
+<div class="container-fluid" style="padding:0">
+<div class="container-fluid card-body" style="padding-left:0; padding-right:0;">
+<h5 class="genshin_font" style="text-align: center">
+Tartaglia
+<i class="fa fa-star" style="color: #FFDF00" aria-hidden="true"></i>
+</h5>
+<div class="container-fluid">
+<div class="row">
+<div class="col-6">
+<img src="../personagens/index/iconelemental/icon_hydro.svg" style="width:100%;"/>
+</div>
+<div class="col-6">
+<img src="../personagens/index/iconweapon/icon_bow.svg" style="width:100%;"/>
 </div>
 </div>
 </div>
