--- a/personagens/albedo/index.html
+++ b/personagens/albedo/index.html
@@ -303,7 +303,7 @@ if (!doNotTrack) {
 <table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
 <tbody>
   <tr>
-   <td style="text-align:left;"> element </td>
+   <td style="text-align:left;"> vision </td>
    <td style="text-align:left;"> geo </td>
   </tr>
   <tr>
@@ -327,7 +327,7 @@ if (!doNotTrack) {
    <td style="text-align:left;"> 13/09 </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> city </td>
+   <td style="text-align:left;"> nation </td>
    <td style="text-align:left;"> mondstadt </td>
   </tr>
   <tr>
