--- a/personagens/amber/index.html
+++ b/personagens/amber/index.html
@@ -295,7 +295,7 @@ if (!doNotTrack) {
 <h1 class="genshin_font">Amber</h1>
 <p class="lead">
 <strong>
-<em>NA</em>
+<em>Sempre energética e cheia de vida, a Amber é a melhor, mas também a última Aventureira dos Cavaleiros de Favonius.</em>
 </strong>
 </p>
 <div class="w-100 p-3" style="background-color: rgba(255, 255, 255, 0.70);">
@@ -303,7 +303,7 @@ if (!doNotTrack) {
 <table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
 <tbody>
   <tr>
-   <td style="text-align:left;"> element </td>
+   <td style="text-align:left;"> vision </td>
    <td style="text-align:left;"> pyro </td>
   </tr>
   <tr>
@@ -327,7 +327,7 @@ if (!doNotTrack) {
    <td style="text-align:left;"> 10/08 </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> city </td>
+   <td style="text-align:left;"> nation </td>
    <td style="text-align:left;"> mondstadt </td>
   </tr>
   <tr>
