--- a/personagens/noelle/index.html
+++ b/personagens/noelle/index.html
@@ -295,7 +295,7 @@ if (!doNotTrack) {
 <h1 class="genshin_font">Noelle</h1>
 <p class="lead">
 <strong>
-<em>NA</em>
+<em>Uma empregada em serviço dos Cavaleiros de Favonius que sonha em se juntar aos cavaleiros um dia.</em>
 </strong>
 </p>
 <div class="w-100 p-3" style="background-color: rgba(255, 255, 255, 0.70);">
@@ -303,7 +303,7 @@ if (!doNotTrack) {
 <table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
 <tbody>
   <tr>
-   <td style="text-align:left;"> element </td>
+   <td style="text-align:left;"> vision </td>
    <td style="text-align:left;"> geo </td>
   </tr>
   <tr>
@@ -312,7 +312,7 @@ if (!doNotTrack) {
   </tr>
   <tr>
    <td style="text-align:left;"> allegiance </td>
-   <td style="text-align:left;"> NA </td>
+   <td style="text-align:left;"> cavaleiros de favonius </td>
   </tr>
   <tr>
    <td style="text-align:left;"> title </td>
@@ -327,7 +327,7 @@ if (!doNotTrack) {
    <td style="text-align:left;"> 21/03 </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> city </td>
+   <td style="text-align:left;"> nation </td>
    <td style="text-align:left;"> mondstadt </td>
   </tr>
   <tr>
