--- a/personagens/tartaglia/index.html
+++ b/personagens/tartaglia/index.html
@@ -295,7 +295,7 @@ if (!doNotTrack) {
 <h1 class="genshin_font">Tartaglia</h1>
 <p class="lead">
 <strong>
-<em>NA</em>
+<em>O nº 11 dos Mensageiros dos Fatui, também conhecido como "Childe". O seu nome é bastante temido nos campos de batalha.</em>
 </strong>
 </p>
 <div class="w-100 p-3" style="background-color: rgba(255, 255, 255, 0.70);">
@@ -303,7 +303,7 @@ if (!doNotTrack) {
 <table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
 <tbody>
   <tr>
-   <td style="text-align:left;"> element </td>
+   <td style="text-align:left;"> vision </td>
    <td style="text-align:left;"> hydro </td>
   </tr>
   <tr>
@@ -327,7 +327,7 @@ if (!doNotTrack) {
    <td style="text-align:left;"> 20/07 </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> city </td>
+   <td style="text-align:left;"> nation </td>
    <td style="text-align:left;"> snezhnayan </td>
   </tr>
   <tr>
