--- a/personagens/xiao/index.html
+++ b/personagens/xiao/index.html
@@ -295,7 +295,7 @@ if (!doNotTrack) {
 <h1 class="genshin_font">Xiao</h1>
 <p class="lead">
 <strong>
-<em>NA</em>
+<em>Um Yaksha, um ser imortal que protege Liyue. Também chamado de "O Caçador de Demônios" ou "Guardião Yaksha".</em>
 </strong>
 </p>
 <div class="w-100 p-3" style="background-color: rgba(255, 255, 255, 0.70);">
@@ -303,7 +303,7 @@ if (!doNotTrack) {
 <table class="table table-hover table-striped" style="margin-left: auto; margin-right: auto;">
 <tbody>
   <tr>
-   <td style="text-align:left;"> element </td>
+   <td style="text-align:left;"> vision </td>
    <td style="text-align:left;"> anemo </td>
   </tr>
   <tr>
@@ -312,7 +312,7 @@ if (!doNotTrack) {
   </tr>
   <tr>
    <td style="text-align:left;"> allegiance </td>
-   <td style="text-align:left;"> NA </td>
+   <td style="text-align:left;"> adepti de liyue </td>
   </tr>
   <tr>
    <td style="text-align:left;"> title </td>
@@ -327,7 +327,7 @@ if (!doNotTrack) {
    <td style="text-align:left;"> 17/04 </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> city </td>
+   <td style="text-align:left;"> nation </td>
    <td style="text-align:left;"> liyue </td>
   </tr>
   <tr>
