Nova tentativa do MODAL.

--- a/personagens/index.html
+++ b/personagens/index.html
@@ -1266,7 +1266,36 @@ Aether
 <img src="../personagens/index/iconelemental/icon_anemo.svg" style="width:100%;"/>
 </div>
 <div class="col-6">
-<img src="../personagens/index/iconweapon/icon_sword.svg" style="width:100%;"/>
+<img src="../personagens/index/iconweapon/icon_na.svg" style="width:100%;"/>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="col mb-4">
+<div class="card h-100">
+<div class="container-fluid no-padding" style="background-image: url(&#39;../personagens/index/sne_avatar_bg.png&#39;); background-repeat: no-repeat;&#10;                                    background-size: cover;&#10;                                    background-position: center center;&#10;                                    width: 100%;">
+<a href="../personagens/aether">
+<div style="text-align: center;">
+<img style="content:url(&#39;../personagens/index/avatares/sne_avatar_aether.png&#39;)"/>
+</div>
+</a>
+</div>
+<div class="container-fluid" style="padding:0">
+<div class="container-fluid card-body" style="padding-left:0; padding-right:0;">
+<h5 class="genshin_font" style="text-align: center">
+Aether
+<i class="fa fa-star" style="color: #FFDF00" aria-hidden="true"></i>
+</h5>
+<div class="container-fluid">
+<div class="row">
+<div class="col-6">
+<img src="../personagens/index/iconelemental/icon_anemo.svg" style="width:100%;"/>
+</div>
+<div class="col-6">
+<img src="../personagens/index/iconweapon/icon_na.svg" style="width:100%;"/>
 </div>
 </div>
 </div>
@@ -1292,10 +1321,39 @@ Lumine
 <div class="container-fluid">
 <div class="row">
 <div class="col-6">
-<img src="../personagens/index/iconelemental/icon_anemo.svg" style="width:100%;"/>
+<img src="../personagens/index/iconelemental/icon_geo.svg" style="width:100%;"/>
 </div>
 <div class="col-6">
-<img src="../personagens/index/iconweapon/icon_sword.svg" style="width:100%;"/>
+<img src="../personagens/index/iconweapon/icon_na.svg" style="width:100%;"/>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="col mb-4">
+<div class="card h-100">
+<div class="container-fluid no-padding" style="background-image: url(&#39;../personagens/index/sne_avatar_bg.png&#39;); background-repeat: no-repeat;&#10;                                    background-size: cover;&#10;                                    background-position: center center;&#10;                                    width: 100%;">
+<a href="../personagens/lumine">
+<div style="text-align: center;">
+<img style="content:url(&#39;../personagens/index/avatares/sne_avatar_lumine.png&#39;)"/>
+</div>
+</a>
+</div>
+<div class="container-fluid" style="padding:0">
+<div class="container-fluid card-body" style="padding-left:0; padding-right:0;">
+<h5 class="genshin_font" style="text-align: center">
+Lumine
+<i class="fa fa-star" style="color: #FFDF00" aria-hidden="true"></i>
+</h5>
+<div class="container-fluid">
+<div class="row">
+<div class="col-6">
+<img src="../personagens/index/iconelemental/icon_geo.svg" style="width:100%;"/>
+</div>
+<div class="col-6">
+<img src="../personagens/index/iconweapon/icon_na.svg" style="width:100%;"/>
 </div>
 </div>
 </div>
