Criação de todas as páginas flexdashboard.

--- a/personagens/hu-tao/index.html
+++ b/personagens/hu-tao/index.html
@@ -295,7 +295,7 @@ if (!doNotTrack) {
 <h1 class="genshin_font">Hu-Tao</h1>
 <p class="lead">
 <strong>
-<em></em>
+<em>4 77ª diretora da Funerária de Wangsheng. Apesar de ser jovem, já está encarregada de todos os assuntos funerários de Liyue.</em>
 </strong>
 </p>
 <div class="w-100 p-3" style="background-color: rgba(255, 255, 255, 0.70);">
@@ -304,30 +304,39 @@ if (!doNotTrack) {
 <tbody>
   <tr>
    <td style="text-align:left;"> vision </td>
+   <td style="text-align:left;"> pyro </td>
   </tr>
   <tr>
    <td style="text-align:left;"> rarity </td>
+   <td style="text-align:left;"> NA </td>
   </tr>
   <tr>
    <td style="text-align:left;"> allegiance </td>
+   <td style="text-align:left;"> funerária de wangsheng </td>
   </tr>
   <tr>
    <td style="text-align:left;"> title </td>
+   <td style="text-align:left;"> NA </td>
   </tr>
   <tr>
    <td style="text-align:left;"> weapon_type </td>
+   <td style="text-align:left;"> polearm </td>
   </tr>
   <tr>
    <td style="text-align:left;"> birthday </td>
+   <td style="text-align:left;"> 15/07 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> nation </td>
+   <td style="text-align:left;"> liyue </td>
   </tr>
   <tr>
    <td style="text-align:left;"> gender </td>
+   <td style="text-align:left;"> female </td>
   </tr>
   <tr>
    <td style="text-align:left;"> special_dish </td>
+   <td style="text-align:left;"> NA </td>
   </tr>
 </tbody>
 </table>
@@ -340,6 +349,26 @@ if (!doNotTrack) {
 Atributos
 </h2>
 <p></a></p>
+<p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Detalhes</button></p>
+<div class="modal fade" id="exampleModal" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal-dialog modal-xl modal-dialog-centered">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+<span aria-hidden="true">&times;</span>
+</button>
+</div>
+<div class="modal-body">
+<iframe class="flexdashboard" src="./flexdashboard_hu-tao.html" style="width:100%; height:95vh;"></iframe>
+</div>
+<div class="modal-footer">
+<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+<button type="button" class="btn btn-primary">Understood</button>
+</div>
+</div>
+</div>
+</div>
 <a name="talentos">
 <h2 style="padding-top: 60px; margin-top: -60px;" class="genshin_font">
 Talentos
