--- a/personagens/kaeya/index.html
+++ b/personagens/kaeya/index.html
@@ -349,6 +349,26 @@ if (!doNotTrack) {
 Atributos
 </h2>
 <p></a></p>
+<p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Detalhes</button></p>
+<div class="modal fade" id="exampleModal" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal-dialog modal-xl modal-dialog-centered">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+<span aria-hidden="true">&times;</span>
+</button>
+</div>
+<div class="modal-body">
+<iframe class="flexdashboard" src="./flexdashboard_kaeya.html" style="width:100%; height:95vh;"></iframe>
+</div>
+<div class="modal-footer">
+<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+<button type="button" class="btn btn-primary">Understood</button>
+</div>
+</div>
+</div>
+</div>
 <a name="talentos">
 <h2 style="padding-top: 60px; margin-top: -60px;" class="genshin_font">
 Talentos
